# aria

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.prod  LOCKED-DECISIONS.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  fix_schema.py  patch_pipeline_guard.py  pyproject.toml  pytest.ini  tmp_admin_token.txt  tmp_curl.json  tmp_dash.json
.claude/: settings.local.json
.claude/skills/aria-docs/: SKILL.md
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  deploy-backend.yml  deploy-frontend.yml
.hermes/: .env.example  README.md  SOUL.md  config.yaml
.hermes/skills/engineering-core/: README.md
.playwright-mcp/: page-2026-06-20T09-30-16-304Z.yml  page-2026-06-20T09-31-17-937Z.yml  page-2026-06-20T13-24-24-237Z.yml  page-2026-06-20T13-24-55-767Z.yml  page-2026-06-20T13-26-34-921Z.yml  page-2026-06-20T13-27-03-121Z.yml  page-2026-06-20T13-38-42-208Z.yml  page-2026-06-20T13-38-53-004Z.yml  page-2026-06-20T13-38-56-612Z.yml  page-2026-06-20T13-39-29-098Z.yml  page-2026-06-20T13-44-07-141Z.yml  page-2026-06-20T13-44-30-696Z.yml  page-2026-06-20T13-58-10-571Z.yml  page-2026-06-20T13-58-51-025Z.yml  page-2026-06-20T14-01-37-600Z.yml  page-2026-06-20T14-10-39-894Z.yml  page-2026-06-20T14-14-29-332Z.yml
agents/: __init__.py  artifact_store.py  artifact_vault.py  chart_builder.py  chart_heuristic.py  chart_llm.py  chart_renderer.py  chart_types.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 03a3c29156e0_add_export_limits_to_db_configs.py  084c6880bb31_add_export_link_ttl.py  1051dda49254_add_export_jobs_table.py  46493ab3afbd_add_max_row_limit.py  4ca2dfad6087_add_governance_tables.py  4dff463b5ea2_add_customer_key_config.py  7b3c1a9d4e21_add_row_filters_to_vault_policy.py  88b86ace576f_update_user_roles_enum.py  9a4f2c7e1b88_add_sql_visibility_to_users.py  a25091216115_add_customer_llm_config.py  b163496fb992_add_team_id_to_data_audit_logs.py  ce0a16365076_initial_schema.py  (+5 more)
backend/app/: __init__.py  main.py
backend/scripts/: backfill_cmek.py  cleanup_keycloak.py  fix_backfill.py  fix_passwords.py  seed_dummy_data.py
backend/tests/: _check_routes.py  conftest.py  test_admin_consoles.py  test_admin_conversations.py  test_admin_teams.py  test_admin_users.py  test_audit.py  test_audit_team.py  test_auth.py  test_auth_models.py  test_backup_before_delete.py  test_chart_artifact_bugs.py  test_chart_metering.py  test_chart_model_routing.py  test_chart_type_detection.py  test_cls.py  test_conversation_costs.py  test_conversation_csv_persist.py  test_crypto_kms.py  test_dashboard.py  test_db_executor.py  test_export_dispatch.py  test_export_flow.py  test_export_jobs_model.py  test_exports_endpoint.py  test_guards.py  test_health.py  test_identity.py  test_jit_user_sync.py  test_litellm_admin.py  test_litellm_meta.py  test_llm_config_default.py  test_llm_cost.py  test_llm_insight.py  test_llm_sql_context.py  test_llm_sql_prompt.py  test_massive_export.py  test_mem0_embedding_meter.py  test_mem0_version_contract.py  test_memory_approval.py  (+38 more)
codegraph/: README.md
docs/: GAP-ANALYSIS.md  README.md  build-execution.md  business-test-cases.md  codebase-audit.md  conversation-tracing-test-guide.md  engineering-notes.md  frontend-architecture.md  future-work-summary.md  gap-analysis-2026-06-13.md  gtm-strategy.md  market-research.md  oracle-instant-client-setup.md  pipeline-flow.md  product-design.md  schedule.md  technical-architecture.md  traefik-ssl-setup.md  vault-format-analysis.md  vault-rebuild-runbook.md  vault-schema.md
docs-site/: docusaurus.config.ts  package-lock.json  sidebars.developers.ts  sidebars.guide.ts
docs-site/developers/: api.mdx  architecture.md  config-and-limits.md  intro.md  vault.md
docs-site/guide/: admin-llm-config.md  admin-memory.md  admin-monitoring.md  admin-tenant-config.md  admin-users.md  admin-vault-access.md  byok.md  chart-types.md  chat-flow.md  cmek.md  dashboard.md  data-exports.md  intro.md  onboarding.md  row-limits.md  settings.md  team-memory.md  vault-sync.md  why-aria.md
docs-site/static/: api.html  openapi.json
docs/academy/: index.html
docs/business/: README.md  chat-flow-scenarios.md  competitor-battlecards.md  product-overview.md  sales-playbook.md
docs/plans/: 2026-06-13-sprint8-memory-completion.md
docs/reviews/: S7.4-Frontend-Tests.md  s1.2-db-schema.md  s1.4-jwt-middleware.md  s1.6-frontend.md  s3.1-intent-classifier.md  s3.3-litellm.md
frontend/: .eslintrc.json  .npmrc  Dockerfile.dev  eslint.config.mjs  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
frontend/e2e/: admin-flow.spec.ts  auth-flow.spec.ts  chat-flow.spec.ts  docs-screenshots.spec.ts  schema-flow.spec.ts  test_dashboard.py
infra/: README.md  gunicorn.conf.py  traefik-dynamic.yml
infra/keycloak/: README.md  aria-realm.json  bootstrap.sh  setup-console-sso.py
infra/llm/: RUNBOOK-local-serving.md  config.yaml  docker-compose.llm.yml
scripts/: BUNDLE-RESTORE.md  active_tables-stc-kuwait.txt  bundle-logs.sh  bundle-stack.sh  cc.sh  ccr-config.example.json  dedup-vault-coldesc.py  dedup-vault-sections.py  enrich-vault-stc.py  extract-db-metadata.py  patch-llm-path-aggressive.sh  patch-uuid-guard.sh  patch-vault-enum-sampling.sh  patch-vault-semantic-retrieval.sh  restore-stack.sh  seed-stc-from-snapshot.py  stc_reset_state.py  validate-vault.py  vault-build-stc-from-snapshot.py  vault-extract-remote.py  vault-extract-standalone.py  vault-replace-from-metadata.py  vault-upload.py
skills/architecture-guardian/: SKILL.md
skills/backend-engineer/: SKILL.md
skills/devops-qa/: SKILL.md
skills/frontend-engineer/: SKILL.md
smoke/: README.md  check.sh  done-check.sh  verify-profile.sh
tests/: test_artifact_store.py  test_backend_smoke.py  test_chart_builder.py  test_e2e_integration.py  test_memory_service.py
tests/api/: test_onboarding.py
tests/query/: test_guards.py
tests/services/: test_llm_resolver.py  test_token.py
(+287 files in other folders)
